# Puzzroom

./: .gitignore  .gitmodules  GEMINI.md  README.md  WHISPER_USAGE.md  analyze_whisper_logs.sh  build.gradle.kts  build_output.txt  capture_logs.sh  settings.gradle.kts  upload_info.json
.github/: copilot-instructions.md
.github/agents/: QuickDeployDeveloper.md
.github/workflows/: build-apk.yml  deploy-pages.yml  mvt-play-upload.yml  mvt-version-bump.yml  quick-deploy-auto.yml  unit-tests.yml
.specify/memory/: constitution.md
audio-script-player/: README.md  build.gradle.kts
audio-script-player/src/androidMain/cpp/: CMakeLists.txt  native-lib.cpp
composeApp/: build.gradle.kts
composeApp/docs/: FurnitureShapeEditModalGuide.md  README_IMPLEMENTATION.md  VISUAL_GUIDE.md
docs/: AndroidTV_Support_Design.md  MonorepoDevelopmentGuide.md  PERFORMANCE_ANALYSIS.md  RoomShapeEditingUserGuide.md
docs/architecture/: scrollback-and-mouse-reporting.md
docs/components/: AppIconCheckbox.md
docs/design/: AngleAdjustmentStrategy.md  AtomicDesign.md  AtomicDesignGuide.md  AtomicDesignImplementation.md  ColorPalette.md  CommunicationSequenceDiagrams.md  ComponentCatalog.md  ComponentMigrationExamples.md  ComponentMigrationStatus.md  DataPersistence.md  RoomShapeEditingUI.md  UseCaseAnalysis.md  macro-dsl-specification.md  macro-plugin-architecture.md
docs/implementation/: FurnitureTemplatePersistence.md  IMPLEMENTATION_SUMMARY.md  RoomShapeEditingUIImplementation.md  VerticalSliderImplementation.md
docs/nlt/: ImplementationSummary.md
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: Info.plist
iosApp/iosApp.xcodeproj/: project.pbxproj
magic-deploy/: build.gradle.kts  settings.gradle.kts
mobile-vibe-terminal/: README.md  build.gradle.kts
mobile-vibe-terminal/docs/: DesignDocument.md  TestCoverage.md  Troubleshooting.md  Xterm-Control-Sequenses.html  XtermControlSequenceCompliance.md
nlt-app/: .gitignore  GOOGLE_SIGNIN_SETUP.md  README.md  build.gradle.kts  google-services.json.example
nlt-app/docs/: FR_4.1.2_Implementation.md  残件対応完了レポート.md
quick-deploy-app/: .firebaserc  .gitignore  ANDROID_APP_README.md  ANDROID_APP_SUMMARY.md  ANDROID_IMPLEMENTATION_CHECKLIST.md  AUTO_DOWNLOAD_FLOW.md  DEPLOYMENT.md  DEPLOYMENT_AUTOMATION.md  FIREBASE_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_ANDROID.md  README.md  README_SETUP.md  REQUIREMENTS.md  SIGNED_URL_WITH_NOTIFICATION.md  build.gradle.kts  firestore.rules  storage.rules  verify-setup.sh  実装サマリー.md
quick-deploy-app/examples/: github-actions-integration.md  manual-ssh-integration.md
quick-deploy-app/firebase/: .firebaserc  SIGNED_URL_UPLOAD.md
quick-deploy-app/functions/: README.md  (+4 more)
shared-ui/: README.md  build.gradle.kts
unison-app/: build.gradle.kts
whisper-kmp/: .gitignore  QUICK_START.md  README.md  build.gradle.kts
whisper-kmp/src/androidMain/cpp/: CMakeLists.txt  whisper_jni.cpp
(+558 files in other folders)
